<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/card_view_fill_color"
    card_view:cardCornerRadius="@dimen/card_view_radius"
    card_view:cardElevation="@dimen/card_view_elevation_info_layout"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true"
    tools:ignore="RtlCompat">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_detials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/view_padding_10">

        <TextView
            android:id="@+id/tvStarName"
            style="@style/style_text_title_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:layout_constraintRight_toLeftOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/star_name" />
        <TextView
            card_view:layout_constraintTop_toBottomOf="@+id/tvStarName"
            card_view:layout_constraintRight_toLeftOf="parent"
            android:id="@+id/tvStarGender"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/star_gender" />
        <TextView
            card_view:layout_constraintTop_toBottomOf="@+id/tvStarGender"
            card_view:layout_constraintRight_toLeftOf="parent"
            android:id="@+id/tvBirthYear"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/star_birthyear" />


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@mipmap/right_icon"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintLeft_toRightOf="@id/tvStarGender"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>